# shock-trade

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  render.yaml  requirements.txt  start.ps1
api/: main.py
api/routers/: __init__.py  backtest.py  config.py  matches.py  metrics.py  nfl.py  positions.py  sports.py  system.py  trades.py
config/: settings.py
core/: __init__.py  decision_engine.py  mapper.py  models.py  nfl_decision_engine.py  nfl_mapper.py  order_executor.py  post_trade.py  risk_manager.py  state.py
data_providers/: __init__.py  fixtures.py  live_scores.py  nfl_scores.py
database/: __init__.py  db.py  models.py  repository.py
exchanges/: __init__.py  kalshi_client.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Button.tsx  Card.tsx  Layout.tsx  Table.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts  utils.ts
scripts/: run_bot.py  run_server.py
services/: __init__.py  goal_listener.py  monitoring.py  nfl_score_listener.py  nfl_trade_service.py  trade_service.py
sports/: __init__.py  base.py  manager.py
sports/mlb/: __init__.py  decision.py  provider.py
sports/nba/: __init__.py  decision.py  provider.py
sports/nfl/: __init__.py  decision.py  provider.py
sports/nhl/: __init__.py  decision.py  provider.py
sports/soccer/: __init__.py  decision.py  provider.py
tests/: conftest.py  test_decision_engine.py  test_integration.py  test_mapper.py  test_nfl.py  test_risk_manager.py
(+5 files in other folders)
